# yt_extract

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  USAGE.md  test_example.sh
source_go/: .gitignore  Makefile  PERFORMANCE.md  README.md  VALIDATION.md  go.mod  test_comparison.sh
source_go/cmd/ytextract/: main.go
source_go/internal/extract/: extract.go
source_go/internal/innertube/: innertube.go
src/: extract.rs  innertube.rs  main.rs
