[package]
name = "ytextract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ytextract"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "rustls-tls"], default-features = false }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
url = "2.5"
anyhow = "1.0"
futures = "0.3"
indexmap = "2.1"

